Fixed some loot items that were extending the wrong class