@@ -5,6 +5,7 @@ import dev.rosewood.roseloot.loot.context.LootContextParams;
 import dev.rosewood.roseloot.provider.NumberProvider;
 import dev.rosewood.roseloot.util.LootUtils;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import org.bukkit.Material;
@@ -15,7 +16,7 @@ import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.InventoryHolder;
 import org.bukkit.inventory.ItemStack;
 
-public class EntityEquipmentLootItem extends ItemLootItem {
+public class EntityEquipmentLootItem implements ItemGenerativeLootItem {
 
     private final NumberProvider mainHandDropChance;
     private final NumberProvider offHandDropChance;
@@ -26,7 +27,6 @@ public class EntityEquipmentLootItem extends ItemLootItem {
     private final boolean dropInventory;
 
     public EntityEquipmentLootItem(NumberProvider mainHandDropChance, NumberProvider offHandDropChance, NumberProvider helmetDropChance, NumberProvider chestplateDropChance, NumberProvider leggingsDropChance, NumberProvider bootsDropChance, boolean dropInventory) {
-        super();
         this.mainHandDropChance = mainHandDropChance;
         this.offHandDropChance = offHandDropChance;
         this.helmetDropChance = helmetDropChance;
@@ -38,6 +38,15 @@ public class EntityEquipmentLootItem extends ItemLootItem {
 
     @Override
     public List<ItemStack> generate(LootContext context) {
+        return this.getDroppedEquipment(context, true);
+    }
+
+    @Override
+    public List<ItemStack> getAllItems(LootContext context) {
+        return this.getDroppedEquipment(context, false);
+    }
+
+    private List<ItemStack> getDroppedEquipment(LootContext context, boolean checkChances) {
         List<ItemStack> droppedEquipment = new ArrayList<>();
         Optional<LivingEntity> lootedEntity = context.get(LootContextParams.LOOTED_ENTITY);
         if (lootedEntity.isEmpty())
@@ -47,36 +56,35 @@ public class EntityEquipmentLootItem extends ItemLootItem {
 
         if (this.dropInventory && entity instanceof InventoryHolder) {
             Inventory inventory = ((InventoryHolder) entity).getInventory();
-            droppedEquipment.addAll(List.of(inventory.getStorageContents()));
+            droppedEquipment.addAll(Arrays.asList(inventory.getStorageContents()));
         }
 
         EntityEquipment equipment = entity.getEquipment();
         if (equipment == null)
             return droppedEquipment;
 
-        double mainHandChance = this.mainHandDropChance != null ? this.mainHandDropChance.getDouble(context) : equipment.getItemInMainHandDropChance();
-        double offHandChance = this.offHandDropChance != null ? this.offHandDropChance.getDouble(context) : equipment.getItemInOffHandDropChance();
-        double helmetChance = this.helmetDropChance != null ? this.helmetDropChance.getDouble(context) : equipment.getHelmetDropChance();
-        double chestplateChance = this.chestplateDropChance != null ? this.chestplateDropChance.getDouble(context) : equipment.getChestplateDropChance();
-        double leggingsChance = this.leggingsDropChance != null ? this.leggingsDropChance.getDouble(context) : equipment.getLeggingsDropChance();
-        double bootsChance = this.bootsDropChance != null ? this.bootsDropChance.getDouble(context) : equipment.getBootsDropChance();
-
-        if (equipment.getItemInMainHand().getType() != Material.AIR && LootUtils.checkChance(mainHandChance))
+        if (equipment.getItemInMainHand().getType() != Material.AIR && (!checkChances
+                || LootUtils.checkChance(this.mainHandDropChance != null ? this.mainHandDropChance.getDouble(context) : equipment.getItemInMainHandDropChance())))
             droppedEquipment.add(equipment.getItemInMainHand());
 
-        if (equipment.getItemInOffHand().getType() != Material.AIR && LootUtils.checkChance(offHandChance))
+        if (equipment.getItemInOffHand().getType() != Material.AIR && (!checkChances
+                || LootUtils.checkChance(this.offHandDropChance != null ? this.offHandDropChance.getDouble(context) : equipment.getItemInOffHandDropChance())))
             droppedEquipment.add(equipment.getItemInOffHand());
 
-        if (equipment.getHelmet() != null && LootUtils.checkChance(helmetChance))
+        if (equipment.getHelmet() != null && (!checkChances
+                || LootUtils.checkChance(this.helmetDropChance != null ? this.helmetDropChance.getDouble(context) : equipment.getHelmetDropChance())))
             droppedEquipment.add(equipment.getHelmet());
 
-        if (equipment.getChestplate() != null && LootUtils.checkChance(chestplateChance))
+        if (equipment.getChestplate() != null && (!checkChances
+                || LootUtils.checkChance(this.chestplateDropChance != null ? this.chestplateDropChance.getDouble(context) : equipment.getChestplateDropChance())))
             droppedEquipment.add(equipment.getChestplate());
 
-        if (equipment.getLeggings() != null && LootUtils.checkChance(leggingsChance))
+        if (equipment.getLeggings() != null && (!checkChances
+                || LootUtils.checkChance(this.leggingsDropChance != null ? this.leggingsDropChance.getDouble(context) : equipment.getLeggingsDropChance())))
             droppedEquipment.add(equipment.getLeggings());
 
-        if (equipment.getBoots() != null && LootUtils.checkChance(bootsChance))
+        if (equipment.getBoots() != null && (!checkChances
+                || LootUtils.checkChance(this.bootsDropChance != null ? this.bootsDropChance.getDouble(context) : equipment.getBootsDropChance())))
             droppedEquipment.add(equipment.getBoots());
 
         return droppedEquipment;
